# TrafficSimulator

./: .gitignore  CMakeLists.txt  ElimStreet.cpp  ElimStreet.h  Influence.cpp  Influence.h  Intersection.cpp  Intersection.h  Network.cpp  Network.h  SSC.h  Simulation.cpp  Simulation.h  SpecialVehicle.cpp  SpecialVehicle.h  StateElimination.cpp  StateElimination.h  Street.cpp  Street.h  TransportVehicle.cpp  TransportVehicle.h  Util.cpp  Util.h  Vehicle.cpp  Vehicle.h  example.json  example2.json  jsonParser.cpp  jsonParser.h  main.cpp  test
TrafficSimulator/: CMakeLists.txt  ElimStreet.cpp  Influence.cpp  Intersection.cpp  Intersection.h  Network.cpp  README.md  Simulation.cpp  Simulation.h  SpecialVehicle.cpp  Street.cpp  Vehicle.cpp  main.cpp
TrafficSimulator-master MAAR DAN MET LEUKE SSC/: CMakeLists.txt  Influence.h  Intersection.cpp  Intersection.h  Network.h  StateElimination.h  main.cpp
TrafficSimulator-master MAAR DAN MET LEUKE SSC/ssc_untouched/: SSC.cpp  SSC.h
TrafficSimulator-master MAAR DAN MET LEUKE SSC/test_files/: STEL.json  STEL3.json  STEL4.json  example2.json
TrafficSimulator/ssc_untouched/: SSC.cpp
TrafficSimulator/test_files/: STEL2.json  STEL4.json
ssc_untouched/: SSC.h
test_files/: STEL.json  STEL2.json  STEL3.json  STEL4.json  STELlarger.json  example.json  example2.json  singleVehicle.json
